src/main/resources/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-k8s-mysql
  labels:
    name: springboot-k8s-mysql
spec:
  ports:
    - nodePort: 30000
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: springboot-k8s-mysql
  type: NodePort
#  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-k8s-mysql
spec:
  selector:
    matchLabels:
      app: springboot-k8s-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot-k8s-mysql
    spec:
      containers:
        - name: springboot-k8s-mysql
          image: amelbee/springimage
          ports:
            - containerPort: 8080
